# ttk-file-explorer

./: .gitattributes  .readthedocs.mkdocs.yaml  .readthedocs.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  README_English.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_docs.txt  run_docs.py  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
about/acknowledgments/: index.html
about/author/: index.html
about/license/: index.html
about/privacy-policy/: index.html
about/project-overview/: index.html
assets/javascripts/: custom.js
assets/stylesheets/: rounded-corners.css
community/contribution-guide/: index.html
community/issue-reporting/: index.html
development/changelog/: index.html
development/gallery/: index.html
development/milestones/: index.html
development/roadmap/: index.html
docs/: index.en.md  index.html  index.zh.md
docs/about/: acknowledgments.en.md  acknowledgments.zh.md  author.en.md  author.zh.md  license.en.md  license.zh.md  privacy-policy.en.md  privacy-policy.zh.md  project-overview.en.md  project-overview.zh.md
docs/community/: contribution-guide.en.md  contribution-guide.zh.md  (+2 more)
en/: index.html
javascripts/: baidu-tongji.js  extra.js  uptime.js
overrides/: 404.html  main.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/: README.md  __init__.py  main.py  requirements.txt  requirements_latest.txt
stylesheets/: extra.css  home-style.css
(+143 files in other folders)
