[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttk-file-explorer"
version = "1.0.0"
description = "ðŸ“‚ Lightweight Windows File Explorer (ttkbootstrap-powered Â· tkinter-based Â· MkDocs-documented) | è½»é‡çº§ Windows æ–‡ä»¶ç®¡ç†å™¨ï¼ˆttkbootstrap å¼€å‘ Â· åŸºäºŽ tkinter Â· MkDocs æ–‡æ¡£ç³»ç»Ÿï¼‰"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "pyheight", email = "pyheight@qq.com"}
]
license = {text = "Apache-2.0"}

dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-material==9.6.15",
    "mkdocs-mermaid2-plugin==1.2.1",
    "mkdocs-static-i18n==1.3.0",
]

keywords = [
    "desktop-app",
    "python",
    "windows",
    "gui",
    "tkinter",
    "file-explorer",
    "file-manager",
    "windows-app",
    "ttk",
    "ttkbootstrap",
    "chinese",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-site",
    "documentation",
    "tkinter-gui",
    "ttk-themes",
    "ttkbootstrap-python",
    "giscus",
    "lightweight",
    "open-source"
]

[project.urls]
Homepage = "https://github.com/pyheight/ttk-file-explorer"
Documentation = "https://pyheight.github.io/ttk-file-explorer/"

[tool.setuptools.packages.find]
where = ["src"]
